# rnnoise

./: .gitignore  CMakeLists.txt
include/: rnnoise.h
jni/: Android.mk  Application.mk  Makefile.srcs
